--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@vue/cli-service": "4.3.1",
     "babel-eslint": "10.1.0",
     "eslint": "7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "6.2.2",
+    "prettier": "^2.0.5",
     "vue-template-compiler": "2.6.11"
   },
   "eslintConfig": {
@@ -27,12 +30,18 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "eslint-config-prettier"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "prettier/prettier": "error"
+    },
+    "plugins": [
+      "eslint-plugin-prettier"
+    ]
   },
   "browserslist": [
     "> 1%",
