feat: add routing and facebook api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "jsx": "react"
+    "jsx": "react",
+    "types": [
+      "facebook-js-sdk"
+    ]
   }
 }
