--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "hookrouter": "1.2.3",
     "markdown-to-jsx": "^7.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@types/facebook-js-sdk": "^3.3.2",
+    "@types/hookrouter": "^2.2.5",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -28,6 +31,7 @@
     "raw-loader": "^4.0.2",
     "ts-loader": "^8.0.18",
     "typescript": "^4.2.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.27.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
